Co-authored-by: Thazet <Thazet@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <li><a href="#"><span class="material-symbols-outlined">
                 account_circle
                 </span></a></li>
-            <li><a href="#"><img src="/images/icons8-cart-24.png" alt="cart"></a></li>
-            <li><a href="#"><img width="24px"  src="/images/icons8-question-50.png" alt="faq"></a></li>
-            <li><a href="#"><img width="24px" src="/images/icons8-search-50.png" alt="search"></a></li>
+            <li><a href="#"><img src="C:\Users\OL\Desktop\factoria-f5\main\images\icons8-cart-24.png" alt="cart"></a></li>
+            <li><a href="#"><img width="24px"  src="C:\Users\OL\Desktop\factoria-f5\main\images\icons8-question-50.png" alt="faq"></a></li>
+            <li><a href="#"><img width="24px" src="C:\Users\OL\Desktop\factoria-f5\main\images\icons8-search-50.png" alt="search"></a></li>
         </ul>
     </header>
   <main> 
@@ -87,16 +87,16 @@
     
     <footer>
         <div class="networks">
-            <img width="20" src="/images/icons8-twitter-50.png" alt="twitter"/>
-            <img src="/images/icons8-instagram-26.png" alt="instagram-new" width="20px"/>            
-            <img width="20" src="/images/icons8-facebook-50.png" alt="facebook--v1"/>
-            <img width="20" src="/images/icons8-youtube-50.png" alt="youtube-play"/>
-            <img width="20" src="/images/icons8-tiktok-50.png" alt="tiktok--v1"/>
+            <img width="20" src="C:\Users\OL\Desktop\factoria-f5\main\images\icons8-twitter-50.png" alt="twitter"/>
+            <img src="C:\Users\OL\Desktop\factoria-f5\main\images\icons8-instagram-26.png" alt="instagram-new" width="20px"/>            
+            <img width="20" src="C:\Users\OL\Desktop\factoria-f5\main\images\icons8-facebook-50.png" alt="facebook--v1"/>
+            <img width="20" src="C:\Users\OL\Desktop\factoria-f5\main\images\icons8-youtube-50.png" alt="youtube-play"/>
+            <img width="20" src="C:\Users\OL\Desktop\factoria-f5\main\images\icons8-tiktok-50.png" alt="tiktok--v1"/>
         </div>
         <div class="other">
             
             <ul class="foot">
-                <li><img width="28px" id="esp" src="/images/icons8-spain-48.png" alt="esp">Espana</li>
+                <li><img width="28px" id="esp" src="C:\Users\OL\Desktop\factoria-f5\main\images\icons8-spain-48.png" alt="esp">Espana</li>
                 <li>Privacidad</li>
                 <li>Compromiso con la Privacidad de Google Nest</li>
                 <li>Conditiones de vente</li>
